--- a/package.json
+++ b/package.json
@@ -1,22 +1,65 @@
 {
-  "name": "flipcard-viewer",
+  "name": "flipcard",
   "version": "1.0.0",
-  "description": "A Lit component for displaying flipcard.",
+  "description": "A Lit-based web component for displaying interactive flipcard images with grid support.",
+  "main": "dist/flipcard-viewer.js",
+  "module": "dist/flipcard-viewer.js",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/flipcard-viewer.js",
+      "require": "./dist/flipcard-viewer.js"
+    }
+  },
+  "files": [
+    "dist/",
+    "README.md",
+    "LICENSE"
+  ],
+  "keywords": [
+    "dekart",
+    "flipcard",
+    "lit-element",
+    "web-components",
+    "custom-elements"
+  ],
   "scripts": {
     "start": "web-dev-server",
-    "test": "web-test-runner"
+    "test": "web-test-runner",
+    "test:coverage": "web-test-runner --coverage",
+    "clean": "rimraf dist",
+    "build": "npm run clean && rollup -c",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test"
   },
   "dependencies": {
-    "exifr": "^7.1.3",
+    "exifr": "^7.1.3"
+  },
+  "peerDependencies": {
     "lit": "^3.2.1"
   },
   "devDependencies": {
     "@open-wc/testing": "^4.0.0",
     "@web/dev-server": "^0.4.6",
     "@web/test-runner": "^0.20.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
+    "lit": "^3.2.1",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.37.0",
     "sinon": "^19.0.2"
   },
-  "type": "module",
-  "author": "Your Name",
-  "license": "MIT"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/metaversis/flipcard-viewer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/metaversis/flipcard-viewer/issues"
+  },
+  "homepage": "https://github.com/metaversis/flipcard-viewer#readme",
+  "author": "Adikeshav S",
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  }
 }
